# PolyBot

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
dashboard/: app.py
polybot/: __init__.py  cache.py  collector.py  config.py  db.py  models.py  validator.py
polybot/backtest/: __init__.py  engine.py  metrics.py
polybot/strategies/: __init__.py  ai_analyst.py  arbitrage.py  base.py
polybot/trading/: __init__.py  executor.py  paper_trading.py
scripts/: run_backtest.py  run_collector.py  run_dashboard.py
tests/: __init__.py  test_collector.py  test_strategies.py  test_validator.py
